# libcudavoting

./: CMakeLists.txt  README.md  mainpage.dox  manifest.xml
data/: outputSparse.vtk  output_0.5_cpu_voting.vtk  planes2.vtk  planes4.vtk  winter_sparse.vtk
data/.svn/: all-wcprops  entries
data/.svn/text-base/: Curveplane.vtk.svn-base  sparseFloor.vtk.svn-base
doc/: new_lib.bib  sample_sv_dv.pvsm  template_ming_single.aux  template_ming_single.bbl  template_ming_single.blg  template_ming_single.out  template_ming_single.tex
include/.svn/: all-wcprops  entries
include/tensorvoting/.svn/: all-wcprops  entries
launch/: demo_dense_gpu.launch  demo_sparse_gpu.launch  rviz_tensorvoting.rviz  rviz_tensorvoting.vcg
launch/.svn/: all-wcprops  entries
launch/.svn/text-base/: demo_sparse_gpu.launch.svn-base
lib/.svn/: all-wcprops  entries
src/: .fake_voting_sparse_gpu.cpp.swp  CudaDenseVoting_kernel.cu  CudaTensorSplit.cu  CudaVoting.cu  CudaVoting.h  demo_dense_gpu.cpp  demo_sparse_gpu.cpp  global.h  tensor_voting.cpp  vtktool.cpp  vtktool.h
src/.svn/: all-wcprops  entries
src/.svn/text-base/: CudaDenseVoting_kernel.cu.svn-base  CudaMat33_kernel.cu.svn-base  CudaSparseVoting_kernel.cu.svn-base  CudaTensorSplit.cu.svn-base  CudaTools.cu.svn-base  CudaUnifiedVoting.cu.svn-base  CudaVoting.cu.svn-base  CudaVoting.h.svn-base  aliases.h.svn-base  demo_sparse_gpu.cpp.svn-base  fake_voting_gpu.cpp.svn-base  fake_voting_sparse_gpu.cpp.svn-base  tensor_voting.h.svn-base  types.h.svn-base
